# pupil_recognition

./: .gitignore  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  MmodDatasetLoader.cpp  MmodDatasetLoader.h  MmodTrainer.h  MyTrainer.h  PupilImageInfo.h  PupilTrainer.h  README.md  StdIncludes.h  VideoObjectBoxDetector.cpp  VideoObjectBoxDetector.h  VideoPupilBoxDetector.cpp  VideoPupilBoxDetector.h  pupil_detection.cpp  utils.cpp  utils.h
dlib/cuda/: gpu_data.cpp
dlib/dnn/: trainer.h
training_images/: my_samples.xml  pupil_info.xml  pupil_info2.xml  pupil_info_orig.xml  pupil_info_square.xml  pupil_info_square_with_borders.xml  pupil_info_square_with_borders2 - 200 groups.xml  pupil_info_square_with_borders2.xml  pupil_info_square_with_borders_low_qualitiy.xml  pupil_info_test.xml  test.xml
